--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.5.7",
+    "@types/uuid": "^8.0.0",
+    "mongoose": "^5.9.15",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -35,6 +38,7 @@
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/mongoose": "^5.7.21",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
