--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "recipe-frontend"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "recipe-frontend", "recipe-webcomponents"]
 }
