--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.5.7",
+    "@types/hbs": "^4.0.1",
     "@types/uuid": "^8.0.0",
     "hbs": "^4.1.1",
     "mongoose": "^5.9.15",
